# command-agent

./: .env.sample  LICENSE  README.md  main.py  pyproject.toml  setup.cfg
agents/: agent.py  commands.py  task.py
channels/: channel.py  console.py
commands/: command.py  composite.py  data_schema.py  executor.py  registry.py  resolver.py  sequential.py
commands/notion/: commands.py
samples/: execute_command.py  run_agent.py
storage/: pinecone.py  storage.py
utils/: string.py
